--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,10 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 [project]
 name = "ftuutils"
-version = "0.0.1"
-readme = {file = "README.md", content-type = "text/markdown"}
+dynamic = ["version"]
+keywords = ["FTU", "Tissue", "Cells", "Port-Hamiltonian", "Bond Graphs", "12 Labours"]
+readme = "README.md"
+license = {file = "LICENSE"}
 authors = [
   { name="Jagir R. Hussan", email="r.jagir@auckland.ac.nz" },
 ]
