--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,6 @@ description = "Utilities to create FTU graph templates"
 requires-python = ">=3.7"
 classifiers = [
     "Programming Language :: Python :: 3",
-    "License :: MIT License",
+    "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
