--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -7,14 +7,16 @@ on:
 
 jobs:
   build-and-release-package:
-    if: github.repository == 'ABI-Software/ftuutils'
+    if: github.repository == 'Jagirhussan/ftuutils'
     runs-on: ubuntu-20.04
     name: Release package
     permissions:
       contents: write
       id-token: write  # IMPORTANT: this permission is mandatory for trusted publishing
     steps:
-      - name: Release Python package
-        uses: hsorby/release-python-package-action@v1
+      - name: Publish distribution to Test PyPI
+        uses: pypa/gh-action-pypi-publish@master
         with:
           pypi-package-name: ftuutils
+          password: ${{ secrets.TEST_PYPI_API_TOKEN }}
+          repository_url: https://test.pypi.org/legacy/          
