--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,4 +17,4 @@ classifiers = [
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
-[setuptools_scm]
+[tool.setuptools_scm]
