--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools>=61.0", "setuptools_scm>=8.0"]
+requires = ["setuptools>=61.0", "setuptools_scm>=8.0", "pybind11"]
 build-backend = "setuptools.build_meta"
 [tool.setuptools-git-versioning]
 enabled = true
