--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,4 +19,15 @@ classifiers = [
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
+dependencies = [
+"cloudpickle>=3.1.0",
+"libcellml==0.5.0",
+"matplotlib==3.7.1",
+"networkx==3.1",
+"numpy==2.1.2",
+"scipy==1.14.1",
+"sympy==1.11.1",
+"tqdm>=4.65.0",
+"antlr4-python3-runtime==4.10"
+]
 [tool.setuptools_scm]
